--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       const pass = document.getElementById("password").value;
 
       if (user === "admin" && pass === "1234") {
-        window.location.href = "success.html"; // redirect if correct
+        window.location.href = "https://sites.google.com/d/193HCgn7vlvrO43WFR2QkjiA0SQOAsF3y/p/1qvAJD3KLj85fTFAlRbiDU6Q9pD4Ly9W0/edit"; // redirect if correct
       } else {
         alert("Incorrect username or password");
       }
