--- a/index.html
+++ b/index.html
@@ -1,30 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login Page</title>
+  <meta charset="UTF-8">
+  <title>Login Popup</title>
   <style>
-    body { font-family: Arial; text-align: center; padding: 50px; }
-    input { padding: 10px; margin: 10px; width: 200px; }
-    button { padding: 10px 20px; }
+    body { font-family: Arial; text-align: center; margin-top: 100px; }
+    button { padding: 10px 20px; font-size: 16px; }
+
+    /* Popup modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .modal-content {
+      background-color: white;
+      margin: 15% auto;
+      padding: 20px;
+      border-radius: 10px;
+      width: 300px;
+    }
+
+    input {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+    }
   </style>
 </head>
 <body>
-  <h2>Login</h2>
-  <form onsubmit="checkLogin(); return false;">
-    <input type="text" id="username" placeholder="Username" required><br>
-    <input type="password" id="password" placeholder="Password" required><br>
-    <button type="submit">Login</button>
-  </form>
+
+  <h2>Welcome to My Site</h2>
+  <button onclick="openModal()">Login</button>
+
+  <!-- Hidden login popup -->
+  <div id="loginModal" class="modal">
+    <div class="modal-content">
+      <h3>Login</h3>
+      <input type="text" id="username" placeholder="Username" required><br>
+      <input type="password" id="password" placeholder="Password" required><br>
+      <button onclick="checkLogin()">Submit</button>
+    </div>
+  </div>
 
   <script>
+    function openModal() {
+      document.getElementById("loginModal").style.display = "block";
+    }
+
     function checkLogin() {
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
+      let user = document.getElementById("username").value;
+      let pass = document.getElementById("password").value;
 
       if (user === "admin" && pass === "1234") {
-        window.location.href = "https://sites.google.com/view/petwithpals/login?authuser=4"; // redirect if correct
+        window.open("https://sites.google.com/view/petwithpals/login?authuser=4", "_blank");
       } else {
-        alert("Incorrect username or password");
+        alert("Incorrect credentials.");
+      }
+    }
+
+    // Close modal when clicking outside
+    window.onclick = function(event) {
+      let modal = document.getElementById("loginModal");
+      if (event.target === modal) {
+        modal.style.display = "none";
       }
     }
   </script>
