--- a/index.html
+++ b/index.html
@@ -2,56 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login Popup</title>
+  <title>Login</title>
   <style>
-    body { font-family: Arial; text-align: center; margin-top: 100px; }
-    button { padding: 10px 20px; font-size: 16px; }
-
-    /* Popup modal styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #f8e6ff, #e0ccff);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
 
     .modal-content {
-      background-color: white;
-      margin: 15% auto;
-      padding: 20px;
-      border-radius: 10px;
+      background-color: #fff0ff;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
       width: 300px;
+      text-align: center;
+      animation: fadeIn 0.5s ease;
+    }
+
+    .modal-content h3 {
+      color: #7a00b3;
+      margin-bottom: 20px;
     }
 
     input {
       width: 90%;
       padding: 10px;
       margin: 10px 0;
+      border: 1px solid #d1a3ff;
+      border-radius: 10px;
+      outline: none;
+      background: #fff7ff;
+    }
+
+    button {
+      background-color: #c084fc;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      font-weight: bold;
+      margin-top: 10px;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #a855f7;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
   </style>
 </head>
 <body>
 
-  <h2>Welcome to My Site</h2>
-  <button onclick="openModal()">Login</button>
-
-  <!-- Hidden login popup -->
-  <div id="loginModal" class="modal">
-    <div class="modal-content">
-      <h3>Login</h3>
-      <input type="text" id="username" placeholder="Username" required><br>
-      <input type="password" id="password" placeholder="Password" required><br>
-      <button onclick="checkLogin()">Submit</button>
-    </div>
+  <div class="modal-content">
+    <h3>Login</h3>
+    <input type="text" id="username" placeholder="Username" required><br>
+    <input type="password" id="password" placeholder="Password" required><br>
+    <button onclick="checkLogin()">Login</button>
   </div>
 
   <script>
-    function openModal() {
-      document.getElementById("loginModal").style.display = "block";
-    }
-
     function checkLogin() {
       let user = document.getElementById("username").value;
       let pass = document.getElementById("password").value;
@@ -59,17 +79,11 @@
       if (user === "admin" && pass === "1234") {
         window.open("https://sites.google.com/view/petwithpals/login?authuser=4", "_blank");
       } else {
-        alert("Incorrect credentials.");
-      }
-    }
-
-    // Close modal when clicking outside
-    window.onclick = function(event) {
-      let modal = document.getElementById("loginModal");
-      if (event.target === modal) {
-        modal.style.display = "none";
+        alert("Incorrect username or password.");
       }
     }
   </script>
+
 </body>
 </html>
+
